--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tim-loehr-portfolio",
+  "homepage": "https://mavengence.github.io/",
+  "name": "mavengence.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mavengence.github.io/tim-loehr-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
